# rag-qa-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  embedding_api_test.py  finance_research_infomration_2025-26.txt  pyproject.toml  test.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  main.py
app/api/: schemas.py
app/api/routes/: documents.py  health.py  query.py
app/core/: document_processor.py  embeddings.py  rag_chain.py  ragas_evaluator.py  vector_store.py
static/: index.html
static/css/: custom.css
static/js/: api.js  app.js  components.js  utils.js
tests/: conftest.py  test_documents.py  test_health.py  test_query.py  test_ragas_evaluator.py
